--- a/Portfolio/Pages/Index.razor
+++ b/Portfolio/Pages/Index.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
-<MudText Class="mb-8">Welcome to your new app, powered by MudBlazor!</MudText>
-<MudAlert Severity="Severity.Normal">You can find documentation and examples on our website here: <MudLink Href="https://mudblazor.com" Typo="Typo.body2" Color="Color.Inherit"><b>www.mudblazor.com</b></MudLink></MudAlert>
+<MudAvatar Style="height:250px; width:250px; font-size:4rem;" Image="images/profile.jpg"></MudAvatar>
+
+<MudText Typo="Typo.h3" GutterBottom="true">Hi, there!</MudText>
+<MudText Class="mb-8">Welcome to my Portfolio page, Work is In Progress !!</MudText>
