--- a/Portfolio/Pages/Sudoku.razor
+++ b/Portfolio/Pages/Sudoku.razor
@@ -2,6 +2,4 @@
 
 <PageTitle>Sudoku Game</PageTitle>
 
-
-    
-    <iframe width="500" height="500" src="https://asheesh1996.github.io/sudokuapp/" ></iframe>
+<iframe width="100%" height="100%" src="https://asheesh1996.github.io/sudokuapp/"></iframe>
