--- a/Portfolio/_Imports.razor
+++ b/Portfolio/_Imports.razor
@@ -9,3 +9,5 @@
 @using MudBlazor
 @using Portfolio
 @using Portfolio.Shared
+@using Majorsoft.Blazor.Components.Common.JsInterop.Resize
+@using Majorsoft.Blazor.Components.Common.JsInterop.GlobalMouseEvents
