--- a/Portfolio/Shared/MainLayout.razor
+++ b/Portfolio/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="my-2 pt-2">
+        <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="ma-2 pa-2">
             @Body
         </MudContainer>
     </MudMainContent>
