--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
-    <MudNavLink Href="sudoku" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Games">Sudoku Game</MudNavLink>
+    <MudNavLink Href="games" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Games"> Games </MudNavLink>
+    <MudNavLink Href="serialreader" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Usb">Serial Reader</MudNavLink>
 </MudNavMenu>
