--- a/Portfolio/Pages/Games.razor
+++ b/Portfolio/Pages/Games.razor
@@ -63,6 +63,7 @@
 	{
 		base.OnInitialized();
         _tabs.Add(new TabView { githuburl = "https://github.com/asheesh1996/sudokuapp", Name = "Sudoku Game", Id = Guid.NewGuid(), hostingurl = "https://asheesh1996.github.io/sudokuapp/" });
+        _tabs.Add(new TabView { githuburl = "https://github.com/asheesh1996/HolosuitWebGLDemo", Name = "Holos", Id = Guid.NewGuid(), hostingurl = "https://asheesh1996.github.io/HolosuitWebGLDemo/" });
 	}
 
 }
