--- a/Portfolio/Pages/Index.razor
+++ b/Portfolio/Pages/Index.razor
@@ -1,8 +1,40 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+<MudPaper  Height ="90vh" Width="100%" Class="z-10 ma-n20">
+    <MudAvatar Style="height:250px; width:250px; font-size:4rem;" Image="images/profile.jpg"></MudAvatar>
+    <MudSpacer></MudSpacer>
+    <MudText Align="Align.Center" Typo="Typo.h1" >Brings ideas to life with code..</MudText>
+</MudPaper>
+@*
+<MudTimeline>
+    <MudTimelineItem Color="Color.Info" Size="Size.Small">
+        <ItemOpposite>
+            <MudText Color="Color.Info" Typo="Typo.h5">1970</MudText>
+        </ItemOpposite>
+        <ItemContent>
+            <MudText Color="Color.Info" Typo="Typo.h6" GutterBottom="true">Atom Towns</MudText>
+            <MudText>Construction of the town of Pripyat, one of 9 “atom towns” begins, to be inhabited by future employees of the nuclear power plants.</MudText>
+        </ItemContent>
+    </MudTimelineItem>
+    <MudTimelineItem Color="Color.Success" Size="Size.Small">
+        <ItemOpposite>
+            <MudText Color="Color.Success" Typo="Typo.h5">1977</MudText>
+        </ItemOpposite>
+        <ItemContent>
+            <MudText Color="Color.Success" Typo="Typo.h6" GutterBottom="true">Operational</MudText>
+            <MudText>The first of the Chernobyl Nuclear Power Plants four reactors is ready to operate followed by number 2 in 1978.</MudText>
+        </ItemContent>
+    </MudTimelineItem>
+    <MudTimelineItem Color="Color.Error" Size="Size.Small">
+        <ItemOpposite>
+            <MudText Color="Color.Error" Typo="Typo.h5">2015</MudText>
+        </ItemOpposite>
+        <ItemContent>
+            <MudText Color="Color.Error" Typo="Typo.h6" GutterBottom="true">
 
-<MudAvatar Style="height:250px; width:250px; font-size:4rem;" Image="images/profile.jpg"></MudAvatar>
-
-<MudText Typo="Typo.h3" GutterBottom="true">Hi, there!</MudText>
-<MudText Class="mb-8">Welcome to my Portfolio page, Work is In Progress !!</MudText>
+            </MudText>
+            <MudText>Pripyat officially proclaimed as a city.<br />The Chernobyl Atomic Power Station reaches its first 10 billion kilowatt-hours of electical output.</MudText>
+        </ItemContent>
+    </MudTimelineItem>
+</MudTimeline>*@
