--- a/Portfolio/Shared/MainLayout.razor
+++ b/Portfolio/Shared/MainLayout.razor
@@ -11,13 +11,13 @@
         <MudIconButton Icon="@Icons.Custom.Brands.Google" Color="Color.Inherit" Link="https://scholar.google.com/citations?user=PfqnJZgAAAAJ&hl=en&authuser=1" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" Link="https://www.linkedin.com/in/asheesh-maheshwari/" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/asheesh1996/" Target="_blank" />
-        <MudAvatar Image="images/mygif.gif" Size="Size.Medium" Class="ma-4 " />
+        <MudAvatar Image="images/profile2.jpg" Size="Size.Medium" Class="ma-4 " />
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1" Variant="@DrawerVariant.Responsive">
         <MudDrawerHeader>
             @if (_drawerOpen)
             {
-                <MudText Typo="Typo.h6">Asheesh's Portfolio</MudText>
+                <MudText Typo="Typo.h6">! ! ! N A M A S T E ! ! !</MudText>
             }
 
         </MudDrawerHeader>
@@ -30,7 +30,7 @@
 
     </MudDrawer>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="ma-2 pa-2">
+        <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="ma-1 pa-1">
             @Body
         </MudContainer>
     </MudMainContent>
