--- a/Portfolio/Pages/Index.razor
+++ b/Portfolio/Pages/Index.razor
@@ -1,17 +1,22 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
-<MudCarousel Class="mud-width-full" Style="height:400px;" ShowArrows=true ShowBullets=true AutoCycle=true TData="object">
-    <MudCarouselItem Transition="Transition.Slide" Color="@Color.Primary" >
-        <div class="d-flex" style="height:100% ; width:100% ">
-            <MudImage  Src="images/profile.jpg"   Style="height:100% ; width:100% " ObjectPosition="ObjectPosition.Top" ObjectFit="ObjectFit.Cover"/>
-            
 
-        </div>
+<MudPaper Height="100%" Width="100%" Class="container">
+    <MudText Align="Align.Center" Class="centered " Color=Color.Primary Typo="Typo.h1">Bring ideas to life with code..</MudText>
+    <MudImage Src="images/profile_exo.jpg" Fluid="true" Class="container" Style=" opacity: 0.5">
+    </MudImage>
+
+</MudPaper>
+
+
+@*<MudCarousel Class="mud-width-full" Style="height:75vh;" ShowArrows=true ShowBullets=true AutoCycle=false TData="object">*@
+
+@*<MudCarouselItem Transition="Transition.Slide" Color="@Color.Inherit" >
+
     </MudCarouselItem>
-    <MudCarouselItem Transition="Transition.Slide" Color="@Color.Primary">
+    <MudCarouselItem Transition="Transition.Slide" Color="@Color.Inherit">
         <div class="d-flex" style="height:100% ; width:100% ">
-            <MudText Align="Align.Justify" Typo="Typo.h1">Bring ideas to life with code..</MudText>
         </div>
     </MudCarouselItem>
    @* <MudCarouselItem Transition="Transition.Slide">
@@ -19,36 +24,81 @@
             <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Color="@Color.Primary" Size="@Size.Large" />
         </div>
     </MudCarouselItem>*@
-</MudCarousel>
-@*
+@*</MudCarousel>*@
+<MudText Color="Color.Secondary" Align="Align.Center" Typo="Typo.h5">Work Experince</MudText>
 <MudTimeline>
     <MudTimelineItem Color="Color.Info" Size="Size.Small">
         <ItemOpposite>
-            <MudText Color="Color.Info" Typo="Typo.h5">1970</MudText>
+            <MudText Color="Color.Info" Typo="Typo.h5">June 2019 - Current</MudText>
         </ItemOpposite>
         <ItemContent>
-            <MudText Color="Color.Info" Typo="Typo.h6" GutterBottom="true">Atom Towns</MudText>
-            <MudText>Construction of the town of Pripyat, one of 9 “atom towns” begins, to be inhabited by future employees of the nuclear power plants.</MudText>
+            <MudText Color="Color.Info" Typo="Typo.h6" GutterBottom="true">HoloWorld</MudText>
+            <MudText>Senior Software Engineer at HoloWorld.</MudText>
         </ItemContent>
     </MudTimelineItem>
+
     <MudTimelineItem Color="Color.Success" Size="Size.Small">
         <ItemOpposite>
-            <MudText Color="Color.Success" Typo="Typo.h5">1977</MudText>
+            <MudText Color="Color.Success" Typo="Typo.h5">December 2018 - May 2019</MudText>
         </ItemOpposite>
-        <ItemContent>
-            <MudText Color="Color.Success" Typo="Typo.h6" GutterBottom="true">Operational</MudText>
-            <MudText>The first of the Chernobyl Nuclear Power Plants four reactors is ready to operate followed by number 2 in 1978.</MudText>
+        <ItemContent >
+            <MudText Color="Color.Success" Align="Align.Right" Typo="Typo.h6" GutterBottom="true">HoloWorld</MudText>
+            <MudText Align="Align.Right">Final Year Intern at HoloWorld.</MudText>
         </ItemContent>
     </MudTimelineItem>
+
     <MudTimelineItem Color="Color.Error" Size="Size.Small">
         <ItemOpposite>
-            <MudText Color="Color.Error" Typo="Typo.h5">2015</MudText>
+            <MudText Color="Color.Error" Typo="Typo.h5">May 2018 - July 2018</MudText>
         </ItemOpposite>
         <ItemContent>
             <MudText Color="Color.Error" Typo="Typo.h6" GutterBottom="true">
-
+                Summer Research Intern at Johns Hopkins University
             </MudText>
-            <MudText>Pripyat officially proclaimed as a city.<br />The Chernobyl Atomic Power Station reaches its first 10 billion kilowatt-hours of electical output.</MudText>
+            <MudText>Worked as summer research intern at NeuroEngineering Lab at JHU.</MudText>
         </ItemContent>
     </MudTimelineItem>
-</MudTimeline>*@
+
+    <MudTimelineItem Color="Color.Success" Size="Size.Small">
+        <ItemOpposite>
+            <MudText Color="Color.Success" Typo="Typo.h5">May 2017 - June 2017</MudText>
+        </ItemOpposite>
+        <ItemContent>
+            <MudText Color="Color.Success" Align="Align.Right" Typo="Typo.h6" GutterBottom="true">Jaipur Foot (BMVSS)</MudText>
+            <MudText Align="Align.Right">Intern at Jaipur Foot.</MudText>
+        </ItemContent>
+    </MudTimelineItem>
+</MudTimeline>
+
+
+
+<style>
+    .container {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 85vh; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+        text-align: center;
+    }
+
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        align-content : center ;
+        font-size: 10vw;
+    }
+
+    /* Then style the iframe to fit in the container div with full height and width */
+    .iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+</style>
