--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -3,4 +3,5 @@
     <MudNavLink Href="robotics" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Robotics</MudNavLink>
     <MudNavLink Href="games" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Games"> Games </MudNavLink>
     <MudNavLink Href="serialreader" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Usb">Serial Reader</MudNavLink>
+    <MudNavLink Href="computervision" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Camera">Computer Vision</MudNavLink>
 </MudNavMenu>
